# beer

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: build.yml
audio_streamer/: Cargo.toml
audio_streamer/src/: capture.rs  lib.rs  network.rs  player.rs
audio_streamer_cli/: Cargo.toml
audio_streamer_cli/src/: main.rs
